# printmonitor_client

./: Cargo.toml  README.md
src/: camera_handler.rs  command.rs  error.rs  main.rs  tasks.rs
src/tasks/: camera_task.rs  ws_task.rs
