[package]
name = "print_monitor"
version = "0.1.0"
authors = ["KHTangent"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio-tungstenite = "0.17.1"
tokio = { version = "1.17.0", features = ["full"] }

[dependencies.opencv]
version = "0.63.0"
default-features = false
features = ["videoio", "imgproc", "imgcodecs"]
